overflow not showing issues fixed

--- a/css/ballerina-io-bbe-new.css
+++ b/css/ballerina-io-bbe-new.css
@@ -89,24 +89,9 @@ pre > code > span > span {
   width: 90% !important;
 }
 
-/* .bbe-container {
+.bbe-container {
   position: relative;
 }
-
-.sidebar {
-  position: absolute;
-  height: 500px;
-  left: 0;
-  top: 80px;
-  bottom: 0;
-  width: var(--sidebar-width);
-  font-size: 0.875em;
-  box-sizing: border-box;
-  -webkit-overflow-scrolling: touch;
-  overscroll-behavior-y: contain;
-  background-color: var(--sidebar-bg);
-  color: var(--sidebar-fg);
-} */
 
 ol.chapter {
   width: 265px !important;
@@ -115,7 +100,7 @@ ol.chapter {
 .bal-container {
   display: flex;
   flex-direction: column;
-  margin-left: var(--sidebar-width) !important;
+  margin-left: calc(var(--sidebar-width) + 5%) !important;
   width: 70% !important;
 }
 
